--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
     "devDependencies": {
         "@inertiajs/vue3": "^2.0",
         "@mdi/js": "^7.4.47",
-        "@tailwindcss/forms": "^0.5.7",
-        "@tailwindcss/typography": "^0.5.10",
+        "@tailwindcss/forms": "^0.5.10",
+        "@tailwindcss/postcss": "^4.1.17",
+        "@tailwindcss/typography": "^0.5.19",
         "@tailwindcss/vite": "^4.1.14",
         "@vitejs/plugin-vue": "^6.0.1",
-        "autoprefixer": "^10.4.16",
+        "autoprefixer": "^10.4.22",
         "axios": "^1.11.0",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^2.0.0",
-        "postcss": "^8.4.32",
-        "tailwindcss": "^3.4.0",
+        "postcss": "^8.5.6",
+        "tailwindcss": "^4.1.17",
         "vite": "^7.1.9",
         "vue": "^3.3.13"
     },
