--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     },
     "dependencies": {
         "@date-io/date-fns": "^3.2.1",
+        "@date-io/luxon": "^3.2.0",
         "@inertiajs/inertia": "^0.11.1",
         "@mdi/font": "^7.4.47",
         "@schedule-x/drag-and-drop": "^3.2.0",
@@ -35,6 +36,7 @@
         "@schedule-x/translations": "^3.2.0",
         "@schedule-x/vue": "^3.1.1",
         "date-fns": "^4.1.0",
+        "dayjs": "^1.11.19",
         "imask": "^7.6.1",
         "lodash": "^4.17.21",
         "luxon": "^3.7.2",
