--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "luxon": "^3.7.2",
         "vue-sweetalert2": "^5.0.11",
         "vue3-spinner": "^0.0.17",
-        "vuetify": "^3.10.4"
+        "vuetify": "^3.10.4",
+        "ziggy-js": "^2.6.0"
     }
 }
